--- a/project-alpha/app/ui/global.css
+++ b/project-alpha/app/ui/global.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 :root {
-    --foreground-rgb: 16, 16, 18;
-    --background-start-rgb: 214, 219, 220;
-    --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 255, 255, 255;
+    --input-rgb: 21, 18, 17;
+    --background-start-rgb: 41, 36, 35;
+    --background-end-rgb: 0, 0, 0;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -19,6 +20,10 @@
 body {
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+input, select, option {
+    color: rgb(var(--input-rgb));
 }
 
 @layer utilities {
